--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -62,6 +62,8 @@
                     </li>
                 </ul>
             </li>
+            <li class="divider"></li>
+            <li class="blue darken-3"><a href="/inventory">Portal Inventory</a></li>
         </ul>
     </header>
     <main>
