- add upload csv for add new user

--- a/views/error.handlebars
+++ b/views/error.handlebars
@@ -1,5 +1,18 @@
 {{#section 'title'}}
-    Error - Portal Pulsa Cermati
+    404 - Portal Pulsa Cermati
 {{/section}}
-{{error}} <br>
-Pesan : {{message}}
+<div class="row center">
+    <div class="content mt-50">
+        <a href="/">
+            <img class="company-logo" src="//res.cloudinary.com/cermati/image/upload/c_scale,w_500/v1429779611/error-page/logo-1000-250.png">
+        </a>
+
+        <h1>
+            Maaf, halaman yang Anda cari tidak ada.
+        </h1>
+        <h4>
+            Kembali ke
+            <a href="/">Beranda</a>
+        </h4>
+    </div>
+</div>
