--- a/views/layouts/inventory.handlebars
+++ b/views/layouts/inventory.handlebars
@@ -57,8 +57,7 @@
     {{{body}}}
 </main>
 </body>
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-<script type="text/javascript" src="/javascripts/jquery-2.1.1.min.js"></script>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script type="text/javascript" src="/javascripts/materialize.min.js"></script>
 <script type="text/javascript" src="/javascripts/portal.js"></script>
 <script type="text/javascript" src="/javascripts/jquery.tablesorter.min.js"></script>
