--- a/views/inventory-index.handlebars
+++ b/views/inventory-index.handlebars
@@ -19,15 +19,20 @@
                 <br>
                 <p class="bold">New Hire</p>
             </div>
+            <!--<div class="col s12 m6 l3 center">-->
+                <!--<a href="#"><i class="material-icons large grey-text icon_action">directions_run</i></a>-->
+                <!--<br>-->
+                <!--<p class="bold">Member Resign</p>-->
+            <!--</div>-->
             <div class="col s12 m6 l3 center">
-                <a href="#"><i class="material-icons large grey-text icon_action">directions_run</i></a>
+                <a href="/inventory/import"><i class="material-icons large grey-text icon_action">file_download</i></a>
                 <br>
-                <p class="bold">Member Resign</p>
+                <p class="bold">Import</p>
             </div>
             <div class="col s12 m6 l3 center">
-                <a href="/inventory/transfer"><i class="material-icons large grey-text icon_action">loop</i></a>
+                <a href="/inventory/export"><i class="material-icons large grey-text icon_action">file_upload</i></a>
                 <br>
-                <p class="bold">Transfer Ownership</p>
+                <p class="bold">Export</p>
             </div>
         </div>
     </div>
