--- a/views/inventory-new-hire.handlebars
+++ b/views/inventory-new-hire.handlebars
@@ -47,7 +47,7 @@
                 <div class=" input-field col s12 m12 l6">
                     <select id="userLocation" name="user[0][location]" required>
                         <option value="" disabled selected>Pilih Lokasi</option>
-                            <option value="1">Central Park</option>
+                            <option value="1">Daan Mogot</option>
                             <option value="2">Kedoya</option>
                     </select>
                     <label>Lokasi</label>
