--- a/views/inventory-transfer.handlebars
+++ b/views/inventory-transfer.handlebars
@@ -36,7 +36,7 @@
                             <label>Item</label>
                         </div>
                         <div class="col s12 m1 l1 center">
-                            <a class="mt-10 btn-floating btn disabled" disabled=""><i class="material-icons">fast_forward</i></a>
+                            <span class="font-40"><i class="material-icons green-text">arrow_forward</i></span>
                         </div>
                         <div class="input-field col s12 m5 l5">
                             <select id="toUser0" name="transfers[0][touser]" required>
