- final commit, sync from server

--- a/views/error.handlebars
+++ b/views/error.handlebars
@@ -1,6 +1,8 @@
 {{#section 'title'}}
     404 - Portal Pulsa Cermati
 {{/section}}
+
+{{error}}
 <div class="row center">
     <div class="content mt-50">
         <a href="/">
