--- a/views/inventory-rekapitulasi.handlebars
+++ b/views/inventory-rekapitulasi.handlebars
@@ -36,7 +36,7 @@
                             {{tgl_keluar}}
                         </td>
                         <td>
-                            {{parseCategory jenis}}
+                            {{jenis}}
                         </td>
                         <td>
                             {{nama}}
@@ -54,7 +54,7 @@
                             {{joinTextUserInventory lastuser lastuserdivision}}
                         </td>
                         <td>
-                            {{parseLokasi lokasi}}
+                            {{lokasi}}
                         </td>
                         <td>
                             {{keterangan}}
