--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -30,6 +30,9 @@
                                     <i class="material-icons right">send</i>
                                 </button>
                             </div>
+                            <div class="col s12">
+                                <span class="font-20 green-text" id="message">{{message}}</span>
+                            </div>
                         </div>
                     </form>
                 </div>
