--- a/views/reload.handlebars
+++ b/views/reload.handlebars
@@ -22,6 +22,7 @@
                         <select name="transactions[0][untuk]" id="untuk0">
                             <option value="1">Kedoya</option>
                             <option value="2">Biak</option>
+                            <option value="3">Daan Mogot</option>
                         </select>
                         <label>Untuk : </label>
                     </div>
