--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1041,3 +1041,45 @@ div.valueLabel {
 .height-70{
     height: 70px;
 }
+
+/*FREEZE LEFT PANES*/
+table .freeze {
+    border-collapse: separate;
+    border-spacing: 0;
+    border-top: 1px solid grey;
+}
+
+td .freeze, th .freeze {
+    margin: 0;
+    border: 1px solid grey;
+    white-space: nowrap;
+    border-top-width: 0px;
+}
+
+div .freeze {
+    width: 500px;
+    overflow-x: scroll;
+    margin-left: 12em;
+    overflow-y: visible;
+    padding: 0;
+}
+
+.headcol {
+    position: absolute;
+    width: 12em;
+    left: 0;
+    top: auto;
+    border-top-width: 1px;
+    /*only relevant for first row*/
+    margin-top: -1px;
+    /*compensate for top border*/
+}
+
+.th-height{
+    height: 130px;
+}
+
+.th-text{
+    padding-top: 40px;
+    padding-bottom: 65px;
+}
