--- a/views/layouts/inventory.handlebars
+++ b/views/layouts/inventory.handlebars
@@ -58,7 +58,7 @@
 </main>
 </body>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<script type="text/javascript" src="/javascripts/materialize.min.js"></script>
+<script type="text/javascript" src="/javascripts/materialize.js"></script>
 <script type="text/javascript" src="/javascripts/portal.js"></script>
 <script type="text/javascript" src="/javascripts/jquery.tablesorter.min.js"></script>
 </html>
