--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -71,6 +71,6 @@
     </main>
 </body>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<script type="text/javascript" src="/javascripts/materialize.min.js"></script>
+<script type="text/javascript" src="/javascripts/materialize.js"></script>
 <script type="text/javascript" src="/javascripts/portal.js"></script>
 </html>
