--- a/views/sisa-pulsa.handlebars
+++ b/views/sisa-pulsa.handlebars
@@ -1,3 +1,82 @@
 {{#section 'title'}}
     Pulsa - Portal Pulsa Cermati
 {{/section}}
+<div class="row ml-10 mr-10">
+    <div class="col s12">
+        <span class="font-40">Sisa Pulsa</span>
+    </div>
+    <!--<div class="col s12">-->
+        <!--<form action="#" method="post">-->
+            <!--<div class="input-field col s12 m6 l2">-->
+                <!--<select>-->
+                    <!--<option value="" disabled selected>Pilih Periode</option>-->
+                    <!--<option value="1">Option 1</option>-->
+                    <!--<option value="2">Option 2</option>-->
+                    <!--<option value="3">Option 3</option>-->
+                <!--</select>-->
+                <!--<label>Periode</label>-->
+            <!--</div>-->
+        <!--</form>-->
+    <!--</div>-->
+    <div class="mt-30 home-table row">
+        <div class="col s12 freeze">
+            <table class="bordered auto-scroll freeze">
+                <thead>
+                <tr class="border-bottom">
+                    <th class="border-right headcol th-height" rowspan="3">
+                        <div class="th-text">
+                            Provider
+                        </div>
+                    </th>
+                    <th class="border-right" colspan="{{totalTanggal}}">
+                        Paket / Tanggal & Jam
+                    </th>
+                </tr>
+                <tr class="border-bottom">
+                    <th class="border-right">
+                    </th>
+                    {{#each tanggal}}
+                        <th id="tanggal{{this}}" class="border-right" colspan="4">
+                            {{this}}
+                        </th>
+                    {{/each}}
+                </tr>
+                <tr class="border-bottom">
+                    <th class="border-right">
+                    </th>
+                    {{#each tanggal}}
+                        <th class="border-right">
+                            01:00
+                        </th>
+                        <th class="border-right">
+                            03:00
+                        </th>
+                        <th class="border-right">
+                            11:00
+                        </th>
+                        <th class="border-right">
+                            15:00
+                        </th>
+                    {{/each}}
+                </tr>
+                </thead>
+                <tbody>
+                {{#each layoutTemplate}}
+                    <tr>
+                        <td class="headcol" colspan="2">
+                            {{@key}}
+                        </td>
+                        {{#each this}}
+                            {{#each this}}
+                                <td class="fixed" title="{{this.ussd}}">
+                                    {{this.pulsa}}
+                                </td>
+                            {{/each}}
+                        {{/each}}
+                    </tr>
+                {{/each}}
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
