--- a/views/list.handlebars
+++ b/views/list.handlebars
@@ -2,11 +2,69 @@
     Daftar Trunk - Portal Pulsa Cermati
 {{/section}}
 <div class="row ml-30 mr-30">
-    <div class="col s12">
+    <div class="col s12 mt-20">
         <span class="font-40">Daftar Nomor Terpakai</span>
+        <a class="modal-trigger btn-floating btn-large waves-effect waves-light green right mt-20" href="#modal-addUser"title="Tambah Entry"><i class="material-icons">add</i></a>
+        <!-- Modal Structure -->
+        <div id="modal-addUser" class="modal">
+            <form action="" method="post" class="col s12">
+                <div class="modal-content">
+                    <h4>Edit Detail Provider</h4>
+                    <div class="divider"></div>
+                    <div class="row">
+                        <div class="col s12">
+                            <div class="row">
+                                <div class="input-field col s6 m6 l4">
+                                    <input class="validate" id="namaProvider" name="inputProvider[namaProvider]" type="text" required>
+                                    <label for="namaProvider">Nama Provider</label>
+                                </div>
+                                <div class="input-field col s6 m6 l4">
+                                    <input class="validate" id="noProvider" name="inputProvider[noProvider]" type="text" required>
+                                    <label for="noProvider">No Provider</label>
+                                </div>
+                                <div class="input-field col s6 m6 l4">
+                                    <input class="validate" id="namaPaket" name="inputProvider[namaPaket]" type="text" required>
+                                    <label for="namaPaket">Nama Paket</label>
+                                </div>
+                                <div class="input-field col s6 m6 l4">
+                                    <input class="validate" id="host" name="inputProvider[host]" type="text" required>
+                                    <label for="host">Host (IP)</label>
+                                </div>
+                                <div class="input-field col s6 m6 l4">
+                                    <input class="validate" id="span" name="inputProvider[span]" type="text" required>
+                                    <label for="span">Span</label>
+                                </div>
+                                <div class="input-field col s6 m6 l4">
+                                    <input class="validate" id="hargaPaket" name="inputProvider[hargaPaket]" type="text" required>
+                                    <label for="hargaPaket">Harga Paket</label>
+                                </div>
+                                <div class="input-field col s6 m6 l4">
+                                    <input class="validate" id="caraCekPulsa" name="inputProvider[caraCekPulsa]" type="text" required>
+                                    <label for="caraCekPulsa">Cara Cek Pulsa</label>
+                                </div>
+                                <div class="input-field col s6 m6 l4">
+                                    <input class="validate" id="caraAktivasi" name="inputProvider[caraAktivasi]" type="text" required>
+                                    <label for="caraAktivasi">Cara Aktivasi</label>
+                                </div>
+                                <div class="input-field col s6 m6 l4">
+                                    <input class="validate" id="caraCekKuota" name="inputProvider[caraCekKuota]" type="text" required>
+                                    <label for="caraCekKuota">Cara Cek Kuota</label>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <div class="col s12 mb-20 mr-30">
+                        <button name="addEntryBtn" class="waves-effect waves-green blue darken-3 btn">Submit</button>
+                        <a href="#!" class="modal-action modal-close waves-effect waves-teal btn-flat">Cancel</a>
+                    </div>
+                </div>
+            </form>
+        </div>
     </div>
     <div class="col s12 mt-30 mb-20 home-table">
-        <form id="listForm" name="listForm" action="" method="post" class="col s12">
+        <!--<form action="" method="post" class="col s12">-->
             <table class="bordered">
                 <thead>
                 <tr>
@@ -41,10 +99,7 @@
                         Cara Cek Kuota
                     </th>
                     <th>
-                        Cara Stop Paket
-                    </th>
-                    <th>
-                        Expired Date Paket
+                        Action
                     </th>
                 </tr>
                 </thead>
@@ -56,53 +111,122 @@
                         </td>
                         <td class="listGroup">
                             <span>{{namaProvider}}</span>
-                            <input class="inputListGroup" id="{{namaProvider}}-{{@key}}" name="listGroup[{{@key}}][namaProvider]" type="text" placeholder="Nama Provider" value="{{namaProvider}}">
                         </td>
                         <td class="listGroup">
                             <span>{{noProvider}}</span>
-                            <input class="inputListGroup" id="{{noProvider}}-{{@key}}" name="listGroup[{{@key}}][noProvider]" type="text" placeholder="No Provider" value="{{noProvider}}">
                         </td>
                         <td class="listGroup">
                             <span>{{namaPaket}}</span>
-                            <input class="inputListGroup" id="{{namaPaket}}-{{@key}}" name="listGroup[{{@key}}][namaPaket]" type="text" placeholder="Nama Paket" value="{{namaPaket}}">
                         </td>
                         <td class="listGroup">
                             <span>{{host}}</span>
-                            <input class="inputListGroup" id="{{host}}-{{@key}}" name="listGroup[{{@key}}][host]" type="text" placeholder="Host" value="{{host}}">
                         </td>
                         <td class="listGroup">
                             <span>{{span}}</span>
-                            <input class="inputListGroup" id="{{span}}-{{@key}}" name="listGroup[{{@key}}][span]" type="text" placeholder="Span" value="{{span}}">
                         </td>
                         <td class="listGroup">
                             <span>{{hargaPaket}}</span>
-                            <input class="inputListGroup" id="{{hargaPaket}}-{{@key}}" name="listGroup[{{@key}}][hargaPaket]" type="text" placeholder="Harga Paket" value="{{hargaPaket}}">
                         </td>
                         <td class="listGroup">
                             <span>{{caraCekPulsa}}</span>
-                            <input class="inputListGroup" id="{{caraCekPulsa}}-{{@key}}" name="listGroup[{{@key}}][caraCekPulsa]" type="text" placeholder="Cara Cek Pulsa" value="{{caraCekPulsa}}">
                         </td>
                         <td class="listGroup">
                             <span>{{caraAktivasi}}</span>
-                            <input class="inputListGroup" id="{{caraAktivasi}}-{{@key}}" name="listGroup[{{@key}}][caraAktivasi]" type="text" placeholder="Cara Aktivasi" value="{{caraAktivasi}}">
                         </td>
                         <td class="listGroup">
                             <span>{{caraCekKuota}}</span>
-                            <input class="inputListGroup" id="{{caraCekKuota}}-{{@key}}" name="listGroup[{{@key}}][caraCekKuota]" type="text" placeholder="Cara Cek Kuota" value="{{caraCekKuota}}">
                         </td>
-                        <td class="listGroup">
-                            <span>{{caraStopPaket}}</span>
-                            <input class="inputListGroup" id="{{caraStopPaket}}-{{@key}}" name="listGroup[{{@key}}][caraStopPaket]" type="text" placeholder="Cara Stop Paket" value="{{caraStopPaket}}">
+                        <td>
+                            <!-- Modal Trigger -->
+                            <a class="modal-trigger" href="#modal{{idProvider}}" title="Edit"><i class="material-icons" >mode_edit</i></a>
+                            <a class="modal-trigger red-text" href="#modalDelete{{idProvider}}" title="Hapus Baris"><i class="material-icons" >delete</i></a>
                         </td>
-                        <td class="listGroup">
-                            <span>{{expDatePaket}}</span>
-                            <input class="inputListGroup" id="{{expDatePaket}}-{{@key}}" name="listGroup[{{@key}}][expDatePaket]" type="text" placeholder="Exp Date Paket" value="{{expDatePaket}}">
-                            <input name="listGroup[{{@key}}][ID]" type="hidden" value="{{idProvider}}">
-                        </td>
+                        <!-- Modal Structure -->
+                        <div id="modal{{idProvider}}" class="modal">
+                            <form action="" method="post" class="col s12">
+                                <div class="modal-content">
+                                    <h4>Edit Detail Provider</h4>
+                                    <div class="divider"></div>
+                                    <div class="row">
+                                        <div class="col s12">
+                                            <div class="row">
+                                                <div class="input-field col s6 m6 l4">
+                                                    <input class="validate" id="{{namaProvider}}-{{@key}}" name="listGroup[{{@key}}][namaProvider]" type="text" placeholder="Nama Provider" value="{{namaProvider}}">
+                                                    <label for="{{namaProvider}}-{{@key}}">Nama Provider</label>
+                                                </div>
+                                                <div class="input-field col s6 m6 l4">
+                                                    <input class="validate" id="{{noProvider}}-{{@key}}" name="listGroup[{{@key}}][noProvider]" type="text" placeholder="No Provider" value="{{noProvider}}">
+                                                    <label for="{{noProvider}}-{{@key}}">No Provider</label>
+                                                </div>
+                                                <div class="input-field col s6 m6 l4">
+                                                    <input class="validate" id="{{namaPaket}}-{{@key}}" name="listGroup[{{@key}}][namaPaket]" type="text" placeholder="Nama Paket" value="{{namaPaket}}">
+                                                    <label for="{{namaPaket}}-{{@key}}">Nama Paket</label>
+                                                </div>
+                                                <div class="input-field col s6 m6 l4">
+                                                    <input class="validate" id="{{host}}-{{@key}}" name="listGroup[{{@key}}][host]" type="text" placeholder="Host" value="{{host}}">
+                                                    <label for="{{host}}-{{@key}}">Host (IP)</label>
+                                                </div>
+                                                <div class="input-field col s6 m6 l4">
+                                                    <input class="validate" id="{{span}}-{{@key}}" name="listGroup[{{@key}}][span]" type="text" placeholder="Span" value="{{span}}">
+                                                    <label for="{{span}}-{{@key}}">Span</label>
+                                                </div>
+                                                <div class="input-field col s6 m6 l4">
+                                                    <input class="validate" id="{{hargaPaket}}-{{@key}}" name="listGroup[{{@key}}][hargaPaket]" type="text" placeholder="Harga Paket" value="{{hargaPaket}}">
+                                                    <label for="{{hargaPaket}}-{{@key}}">Harga Paket</label>
+                                                </div>
+                                                <div class="input-field col s6 m6 l4">
+                                                    <input class="validate" id="{{caraCekPulsa}}-{{@key}}" name="listGroup[{{@key}}][caraCekPulsa]" type="text" placeholder="Cara Cek Pulsa" value="{{caraCekPulsa}}">
+                                                    <label for="{{caraCekPulsa}}-{{@key}}">Cara Cek Pulsa</label>
+                                                </div>
+                                                <div class="input-field col s6 m6 l4">
+                                                    <input class="validate" id="{{caraAktivasi}}-{{@key}}" name="listGroup[{{@key}}][caraAktivasi]" type="text" placeholder="Cara Aktivasi" value="{{caraAktivasi}}">
+                                                    <label for="{{caraAktivasi}}-{{@key}}">Cara Aktivasi</label>
+                                                </div>
+                                                <div class="input-field col s6 m6 l4">
+                                                    <input class="validate" id="{{caraCekKuota}}-{{@key}}" name="listGroup[{{@key}}][caraCekKuota]" type="text" placeholder="Cara Cek Kuota" value="{{caraCekKuota}}">
+                                                    <label for="{{caraCekKuota}}-{{@key}}">Cara Cek Kuota</label>
+                                                </div>
+                                                <input id="{{idProvider}}-{{@key}}" name="listGroup[{{@key}}][idProvider]" type="hidden" value="{{idProvider}}">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="modal-footer">
+                                    <div class="col s12 mb-20 mr-30">
+                                        <button name="listGroup[{{@key}}][btnSubmit]" class="waves-effect waves-green blue darken-3 btn">Submit</button>
+                                        <a href="#!" class="modal-action modal-close waves-effect waves-teal btn-flat">Cancel</a>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                        <!-- Modal Structure -->
+                        <div id="modalDelete{{idProvider}}" class="modal">
+                            <form action="" method="post" class="col s12">
+                                <div class="modal-content">
+                                    <h4>Hapus Entry</h4>
+                                    <div class="divider"></div>
+                                    <div class="row">
+                                        <div class="col s12 mt-30">
+                                            <div class="row">
+                                                <input name="btnDelete[idProvider]" type="hidden" value="{{idProvider}}">
+                                                <span>Apakah anda yakin menghapus entry ini ?</span><br>
+                                                <span>Nama  : {{namaProvider}}<br>IP : {{host}}({{span}})</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="modal-footer">
+                                    <div class="col s12 mb-20 mr-30">
+                                        <button name="btnDelete" class="waves-effect waves-green red darken-3 btn">Delete</button>
+                                        <a href="#!" class="modal-action modal-close waves-effect waves-teal btn-flat">Cancel</a>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
                     </tr>
                 {{/each}}
                 </tbody>
             </table>
-        </form>
+        <!--</form>-->
     </div>
 </div>
