- fix Permohonan Tarik Perangkat

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -62,6 +62,8 @@
                     </li>
                 </ul>
             </li>
+            <li><a href="/logout">Logout ({{session.name}})</a></li>
+            <li><a href="/user">User Management</a></li>
             <li class="divider"></li>
             <li class="blue darken-3"><a href="/inventory">Portal Inventory</a></li>
         </ul>
