--- a/views/list.handlebars
+++ b/views/list.handlebars
@@ -9,7 +9,7 @@
         <div id="modal-addUser" class="modal">
             <form action="" method="post" class="col s12">
                 <div class="modal-content">
-                    <h4>Edit Detail Provider</h4>
+                    <h4>Tambah Entry Provider</h4>
                     <div class="divider"></div>
                     <div class="row">
                         <div class="col s12">
